@@ -7,6 +7,7 @@ $tmp = array(
         'description' => '',
         'events' => array(
             'OnMODXInit' => -100,
+            'OnBeforeSaveWebPageCache' => 0,
             'OnSiteRefresh' => 0,
         ),
     ),
