@@ -12,6 +12,21 @@ switch ($modx->event->name) {
         $modx->loadClass($fqn, $path, false, true);
         break;
 
+    case 'OnBeforeSaveWebPageCache':
+        if (!empty($modx->config['fenom_jscripts'])) {
+            foreach ($modx->config['fenom_jscripts'] as $key => $value) {
+                unset($modx->resource->_jscripts[$key]);
+                unset($modx->resource->_loadedjscripts[$value]);
+            }
+        }
+        if (!empty($modx->config['fenom_sjscripts'])) {
+            foreach ($modx->config['fenom_sjscripts'] as $key => $value) {
+                unset($modx->resource->_sjscripts[$key]);
+                unset($modx->resource->_loadedjscripts[$value]);
+            }
+        }
+        break;
+
     case 'OnSiteRefresh':
         /** @var pdoTools $pdoTools */
         if ($pdoTools = $modx->getService('pdoTools')) {
